feat: added cover letter generation

--- a/client/Global.scss
+++ b/client/Global.scss
@@ -1,7 +1,11 @@
 html {
   --background-color: black;
+  --background-alt: #25262b;
+  --background-contrast: #3e3e3e;
   --text-color: white;
+  --text-color-light: #d3d3d3;
   --font-family: "Inter", sans-serif;
+  --font-familiy-alt: "Quicksand", sans-serif;
 }
 
 body {
