--- a/client/Layouts/Main.module.scss
+++ b/client/Layouts/Main.module.scss
@@ -1,9 +1,9 @@
 .main {
   .content {
-    padding: 0 24px;
+    padding: 24px 24px;
 
     @media screen and (min-width: 768px) {
-      padding: 0 56px;
+      padding: 56px 56px;
     }
   }
 }
