--- a/client/components/Navigation/Navbar.module.scss
+++ b/client/components/Navigation/Navbar.module.scss
@@ -32,10 +32,20 @@
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .mobileItems {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   padding: 0;
   list-style-type: none;
   position: fixed;
@@ -44,6 +54,7 @@
   left: 0;
   right: 0;
   backdrop-filter: blur(5px) brightness(0.5);
+  animation: fadeIn 0.5s ease-in-out;
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -52,6 +63,7 @@
   li {
     font-size: 24px;
     color: white;
+    margin-bottom: 24px;
 
     a {
       color: white;
