feat: got autosuggestion working

--- a/client/Global.scss
+++ b/client/Global.scss
@@ -5,7 +5,8 @@ html {
   --text-color: white;
   --text-color-light: #d3d3d3;
   --font-family: "Inter", sans-serif;
-  --font-familiy-alt: "Quicksand", sans-serif;
+  --font-family-alt: "Quicksand", sans-serif;
+  --font-family-secondary: "Roboto", sans-serif;
 }
 
 body {
