--- a/client/components/Forms/NewApplication.module.scss
+++ b/client/components/Forms/NewApplication.module.scss
@@ -4,9 +4,11 @@
 
 .output {
   height: 100%;
+  overflow-y: scroll;
+  scrollbar-width: thin;
   border: 1px solid var(--background-contrast);
   box-sizing: border-box;
-  padding: 14px;
+  padding: 24px;
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -14,5 +16,6 @@
   .coverLetter {
     padding: 0;
     flex-grow: 1;
+    height: 100%;
   }
 }
