--- a/client/Global.scss
+++ b/client/Global.scss
@@ -1,6 +1,6 @@
 html {
   --background-color: black;
-  --background-alt: #25262b;
+  --background-alt: #1e1e1e;
   --background-contrast: #3e3e3e;
   --text-color: white;
   --text-color-light: #d3d3d3;
