--- a/client/Global.scss
+++ b/client/Global.scss
@@ -7,9 +7,19 @@ html {
   --font-family: "Inter", sans-serif;
   --font-family-alt: "Quicksand", sans-serif;
   --font-family-secondary: "Roboto", sans-serif;
+  --link-color: #2256f2;
 }
 
 body {
   background-color: var(--background-color);
   color: var(--text-color);
+}
+
+a {
+  color: var(--link-color);
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
