--- a/client/components/TextEditor/Automatic/Automatic.module.scss
+++ b/client/components/TextEditor/Automatic/Automatic.module.scss
@@ -29,6 +29,8 @@
   line-height: 24px;
   font-weight: 300;
   font-family: var(--font-family-secondary);
+  background-color: #25262b;
+  border-radius: 0.25rem;
 }
 
 .options {
